gccida/g1/defs_to_undefined
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:681:4: error: expected ';' after expression
rtx reg; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:681:5: error: use of undeclared identifier 'reg'
rtx reg; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:690:1: error: use of undeclared identifier 'reg'
reg = defs->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:691:17: error: use of undeclared identifier 'reg'
if ( *( _WORD *)reg == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:693:24: error: use of undeclared identifier 'reg'
rtuint = *( _DWORD *)( reg->fld[0].rtwint + 8); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/ssa-ccp.c:704:10: error: use of undeclared identifier 'reg'
rtuint = reg->fld[0].rtuint; 
         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_undefined/src/obj/ssa-ccp.o] Error 1
